--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <script src='https://cdn01.boxcdn.net/polyfills/core-js/2.5.3/core.min.js'></script>
         <script src='./preview.js'></script>
         <script src='./annotations.js'></script>
+        <script src='https://unpkg.com/tesseract.js@v2.0.0-alpha.10/dist/tesseract.min.js'></script>
 
         <style>
             * {
@@ -99,6 +100,7 @@
                     enableThumbnailsSidebar: true,
                     showAnnotations: true,
                     showDownload: true,
+                    apiHost: 'https://api.conradchan.inside-box.net'
                 };
                 previewOptions.container = '.preview-container';
 
