feat(model3d): Add flyout for animation clips

--- a/src/index.html
+++ b/src/index.html
@@ -96,6 +96,12 @@
                     enableThumbnailsSidebar: true,
                     showAnnotations: true,
                     showDownload: true,
+                    useReactControlsModel3D: true,
+                    viewers: {
+                        MP3: {
+                            useReactControls: true,
+                        },
+                    },
                 };
                 previewOptions.container = '.preview-container';
 
